minikube/node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    name: web
  selector:
    app: nginx
