minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: shaozhen.talk.utd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8090
